--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "autoprefixer": "^10.4.19",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "vue": "^2.7.10",
     "vue-i18n": "^8.28.2",
     "vue-server-renderer": "^2.7.10",
