--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,32 @@
-# Nuxt dev/build outputs
-.output
-.data
-.nuxt
-.nitro
-.cache
-dist
-
-# Node dependencies
-node_modules
-
-# Logs
+## Logs
 logs
-*.log
+.log
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Misc
-.DS_Store
-.fleet
-.idea
-
-# Local env files
+## Arquivos de ambiente - NUNCA ENVIE ESTE ARQUIVO PARA O REPOSITÓRIO!
 .env
 .env.*
 !.env.example
+
+## Dependências
+node_modules
+
+## Arquivos de Build do Nuxt
+.nuxt
+.output
+dist
+dist-ssr
+
+## Arquivos de Cache e Temporários
+.cache
+.npm
+.yarn-integrity
+.pnpm-store
+
+## Arquivos específicos de editores e SO
+.vscode
+.idea
+.DS_Store
