--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@types/node": "^24.3.3"
+    "@types/node": "^24.3.3",
+    "nuxt-icon": "^1.0.0-beta.7"
   }
 }
