--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/index.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js -d ./src/database/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
-    "migration:run": "npm run typeorm -- migration:run"
+    "migration:run": "npm run typeorm -- migration:run",
+    "populate-team-ids": "ts-node scripts/populate-team-ids.ts"
   },
   "keywords": [],
   "author": "",
