--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "hashids": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.26"
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.3",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
