--- a/backend/package.json
+++ b/backend/package.json
@@ -37,5 +37,8 @@
     "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
