--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "typeorm": "0.3.27"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
@@ -40,6 +40,5 @@
   },
   "engines": {
     "node": "22.x"
-  },
-  "type": "module"
+  }
 }
