--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@pinia/nuxt": "^0.11.2",
+    "@vueuse/core": "^13.9.0",
     "eslint": "^9.35.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^4.1.1",
