Calcula os pontos após o término das partidas

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "hashids": "^2.3.0",
