--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint": "^9.35.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^4.1.1",
+    "shepherd.js": "^14.5.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
