--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js -d ./src/database/data-source.ts",
+    "typeorm": "node --loader ts-node/esm ./node_modules/typeorm/cli.js -d ./src/database/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "db:update": "node --loader ts-node/esm src/scripts/update-past-matches.ts"
